--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Your awesome title
-author: GitHub User
+title: My Blog
+author: Jerry Tan
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Greetings! My name is Jerry Tan and I am a third year computer science student from the University of California, Riverside. 
+  I will be interning at the Naval Surface Warfare Center Corona Divsion this summer!
 
 # social links
 twitter_username: your-twitter-handle
@@ -12,4 +11,4 @@ github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-hacker
+theme: minima
